fix: statistics microservice fully functional
